# quick-trader

./: .gitignore  Cargo.toml  README.MD  README.md  README2.MD  WHOAMI.md  model.py  python_demo.py
account/: Cargo.toml
account/src/: account.rs  lib.rs  position.rs
backtest/: Cargo.toml
backtest/src/: backtest_market_server.rs  backtest_trade_server.rs  lib.rs
binance/: Cargo.toml
binance/src/: bn_market_server.rs  bn_sim_market_server.rs  bn_sim_trade_server.rs  bn_trade_server.rs  lib.rs  model.rs
binance_assembler/: Cargo.toml
binance_assembler/src/: c_model.rs  context.rs  lib.rs  model.rs  spi.rs
binance_future_connector/: Cargo.toml
binance_future_connector/examples/: Cargo.toml  hyper.rs  tokio_tungstenite.rs  tungstenite.rs  ureq.rs  wss_keepalive.rs
binance_future_connector/examples/account/: account.rs  leverage_bracket.rs
binance_future_connector/examples/isolated_margin_stream/: close_listen_key.rs  new_listen_key.rs  renew_listen_key.rs
binance_future_connector/examples/margin/: bnb_burn_status.rs  isolated_margin_account.rs  isolated_margin_account_limit.rs  isolated_margin_all_symbols.rs  isolated_margin_disable_account.rs  isolated_margin_enable_account.rs  isolated_margin_fee_data.rs  isolated_margin_tier_data.rs  margin_account.rs  margin_account_borrow_repay.rs  margin_all_assets.rs  margin_all_oco_order.rs  margin_all_orders.rs  margin_all_pairs.rs  margin_borrow_repay_records.rs  margin_cancel_oco_order.rs  margin_cancel_open_orders.rs  margin_cancel_order.rs  margin_fee_data.rs  margin_force_liquidation_record.rs  margin_interest_history.rs  margin_interest_rate_history.rs  margin_max_borrowable.rs  margin_max_transferable.rs  margin_my_trades.rs  margin_new_oco_order.rs  margin_new_order.rs  margin_oco_order.rs  margin_open_oco_order.rs  margin_open_orders.rs  margin_order.rs  margin_order_count_usage.rs  margin_price_index.rs  margin_transfer_history.rs  toggle_bnb_burn.rs
binance_future_connector/examples/margin_stream/: close_listen_key.rs  new_listen_key.rs  renew_listen_key.rs
binance_future_connector/examples/market/: agg_trades.rs  book_ticker.rs  continuous_klines.rs  depth.rs  exchange_info.rs  funding_info.rs  funding_rate.rs  historical_trades.rs  index_price_klines.rs  klines.rs  open_interest.rs  ping.rs  premium_index.rs  premium_index_klines.rs  ticker_price.rs  ticker_twenty_four_hr.rs  time.rs  trades.rs
binance_future_connector/examples/market_stream/: contract_kline.rs  liquidation_order.rs  mark_price.rs
binance_future_connector/examples/stream/: close_listen_key.rs  new_listen_key.rs  renew_listen_key.rs
binance_future_connector/examples/trade/: account.rs  adl_quantile.rs  all_orders.rs  cancel_an_existing_order_and_send_a_new_order.rs  cancel_multi_order.rs  cancel_oco_order.rs  cancel_open_orders.rs  cancel_order.rs  countdown_cancel_all.rs  force_orders.rs  get_oco_order.rs  get_oco_orders.rs  get_open_oco_orders.rs  get_order.rs  leverage.rs  margin_type.rs  modify_multi_order.rs  modify_order.rs  multi_assets_margin.rs  my_trades.rs  new_multi_order.rs  new_oco_order.rs  new_order.rs  new_order_test.rs  open_orders.rs  order_amendment.rs  order_limit_usage.rs  position_margin.rs  position_risk.rs  position_side.rs  user_trades.rs
binance_future_connector/examples/user_data_stream/: close_listen_key.rs  new_listen_key.rs  renew_listen_key.rs  wss_listen_key_keepalive.rs
binance_future_connector/examples/wallet/: account_snapshot.rs  account_status.rs  api_key_permission.rs  api_trading_status.rs  asset_detail.rs  asset_dividend_record.rs  coin_info.rs  deposit_address.rs  deposit_history.rs  disable_fast_withdraw.rs  dust_log.rs  dust_transfer.rs  dustable_assets.rs  enable_fast_withdraw.rs  funding_wallet.rs  system_status.rs  trade_fee.rs  universal_transfer.rs  universal_transfer_history.rs  user_asset.rs  withdraw.rs  withdraw_history.rs
binance_future_connector/src/: config.rs  lib.rs  test.rs  tokio_tungstenite.rs  tungstenite.rs  wss_keepalive.rs  wss_keepalive_api.rs  wss_listen_key_keepalive.rs
binance_sim/: Cargo.toml
binance_sim/src/: bn_sim_market_server.rs  bn_sim_trade_server.rs  lib.rs  model.rs
binance_spot_connector/: Cargo.toml
binance_spot_connector/examples/: Cargo.toml  hyper.rs  tokio_tungstenite.rs  tungstenite.rs  ureq.rs
binance_spot_connector/src/: lib.rs  tokio_tungstenite.rs  tungstenite.rs
bybit/: Cargo.toml
bybit/src/: bb_market_server.rs  bb_sim_market_server.rs  bb_sim_trade_server.rs  bb_trade_server.rs  lib.rs  model.rs
bybit_connector/: Cargo.toml
bybit_connector/examples/: Cargo.toml  account.rs  account_info.rs  klines.rs  new_order.rs  position_side.rs  ureq.rs
bybit_connector/examples/trade/: new_order.rs
bybit_connector/src/: config.rs  enums.rs  lib.rs  tungstenite.rs  utils.rs  websocket.rs  wss_keepalive.rs
bybit_connector/src/account/: account.rs  account_info.rs  mod.rs  position.rs
bybit_connector/src/http/: credentials.rs  request.rs
bybit_connector/src/market/: get_klines.rs  get_server_time.rs  klines.rs  mod.rs  time.rs
bybit_connector/src/market_stream/: depth.rs  kline.rs  mod.rs  ticker.rs
bybit_connector/src/trade/: cancel_order.rs  cancel_orders.rs  enums.rs  mod.rs  new_order.rs  set_leverage.rs  set_margin_mode.rs  switch_isolated.rs  switch_mode.rs
bybit_connector/src/ureq/: client.rs
bybit_connector/src/user_stream/: mod.rs  order.rs  position.rs  wallet.rs
common/: Cargo.toml
common/src/: lib.rs
ctp/: Cargo.toml
ctp/src/: ctp_code.rs  ctp_market_cpi.rs  ctp_market_server.rs  ctp_market_spi.rs  ctp_sim_market_server.rs  ctp_sim_trade_server.rs  ctp_trade_cpi.rs  ctp_trade_server.rs  ctp_trade_spi.rs  lib.rs  model.rs
ctp_assembler/: Cargo.toml  TradingDay.con
ctp_assembler/src/: c_model.rs  context.rs  lib.rs  spi.rs
examples/: Cargo.toml  tokio_tungstenite.rs
examples/isolated_margin_stream/: close_listen_key.rs
examples/market/: wss.rs  (+7 more)
lib_assembler/: Cargo.toml
log/: Cargo.toml
market/: Cargo.toml
trade/: Cargo.toml
unit_test/: Cargo.toml
unit_test/src/: lib.rs  main.rs
(+275 files in other folders)
