[package]
name = "binance_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { path = "../log" }
common = { path = "../common" }
trade = { path = "../trade" }
market = { path = "../market" }
binance = { path = "../binance"}
tungstenite = {version = "0.23.0", features = ["native-tls"]}
binance_future_connector = { path = "../binance_future_connector", features = ["enable-tungstenite"]}

tokio = { version = "1", features = ["full"] }
futures-util = "0.3.21"
env_logger = "0.11.3"
rust_decimal = "1.24.0"
rust_decimal_macros = "1.24.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "*"
chrono = "0.4.38"
crossbeam = "0.8.4"