[package]
name = "bybit_connector"
version = "0.1.0"
edition = "2021"


[dependencies]
hmac = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
url = "2.2.2"
rust_decimal = "1.24.0"
http = "0.2.7"
strum = { version = "0.26.2", features = ["derive"] }
rand = "0.8.5"
signature = "2.2.0"
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.0", features = ["serde", "zeroize", "rand_core", "digest", "pkcs8", "pem"] }

# enable-ureq
ureq = { version = "2.4.0", features = [ "socks-proxy" ]}

serde_json = { version = "1.0.78"}

# enable-tungstenite
tungstenite = {version = "0.23.0", features = ["native-tls"]}

log = { path = "../log"}

