[package]
name = "ctp"
version = "0.1.0"
edition = "2021"

[dependencies]

libctp-sys = "0.1.4"
common = { path = "../common" }
trade = { path = "../trade" }
market = { path = "../market" }
serde = { version = "1.0.55", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
env_logger = "0.10"