[package]
name = "ctp"
version = "0.1.0"
edition = "2021"

[dependencies]
libctp-sys = "0.1.4"
log = { path = "../log" }
common = { path = "../common" }
trade = { path = "../trade" }
market = { path = "../market" }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.3"
crossbeam = "0.8.4"
chrono = "0.4.38"
