[package]
name = "ctp"
version = "0.1.0"
edition = "2021"

[dependencies]
libctp-sys = "0.1.4"
log = { path = "../log" }
common = { path = "../common" }
trade = { path = "../trade" }
market = { path = "../market" }
serde = { version = "1.0.136", features = ["derive"] }
crossbeam = "0.8.4"
chrono = "0.4.38"
rust_decimal = "1.24.0"
rust_decimal_macros = "1.24.0"
ureq = { version = "2.4.0" }
serde_json = "*"
