[package]
name = "ctp_assembler"
version = "0.1.0"
edition = "2021"

[lib]
name = "quick_trader_ctp"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
trade = { path = "../trade" }
market = { path = "../market" }
ctp = { path = "../ctp" }
log = { path = "../log"}
rust_decimal_macros = "1.24.0"
rust_decimal = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.38"
