[package]
name = "binance-future-connector-examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
binance_future_connector = { path = "..", features = ["full"]}
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.21"
env_logger = "0.11.3"
rust_decimal = "1.24.0"
rust_decimal_macros = "1.24.0"
serde_json = "*"

[[example]]
name="hyper"
path="hyper.rs"

[[example]]
name="ureq"
path="ureq.rs"

[[example]]
name="wss_keepalive"
path="wss_keepalive.rs"

[[example]]
name="user_data_stream/wss_listen_key_keepalive"
path="user_data_stream/wss_listen_key_keepalive.rs"

[[example]]
name="tokio_tungstenite"
path="tokio_tungstenite.rs"

[[example]]
name="tungstenite"
path="tungstenite.rs"

[[example]]
name="market_ping"
path="market/ping.rs"

[[example]]
name="market_time"
path="market/time.rs"

[[example]]
name="market_exchange_info"
path="market/exchange_info.rs"

[[example]]
name="market_depth"
path="market/depth.rs"

[[example]]
name="market_trades"
path="market/trades.rs"

[[example]]
name="market_historical_trades"
path="market/historical_trades.rs"

[[example]]
name="market_agg_trades"
path="market/agg_trades.rs"

[[example]]
name="market_klines"
path="market/klines.rs"

[[example]]
name="market_continuous_klines"
path="market/continuous_klines.rs"

[[example]]
name="market_index_price_klines"
path="market/index_price_klines.rs"

[[example]]
name="market_premium_index_klines"
path="market/premium_index_klines.rs"

[[example]]
name="market_premium_index"
path="market/premium_index.rs"

[[example]]
name="market_funding_rate"
path="market/funding_rate.rs"

[[example]]
name="market_funding_info"
path="market/funding_info.rs"

[[example]]
name="market_ticker_twenty_four_hr"
path="market/ticker_twenty_four_hr.rs"

[[example]]
name="market_ticker_price"
path="market/ticker_price.rs"

[[example]]
name="market_book_ticker"
path="market/book_ticker.rs"

[[example]]
name="market_open_interest"
path="market/open_interest.rs"

[[example]]
name="market_stream_mark_price"
path="market_stream/mark_price.rs"

[[example]]
name="market_stream_contract_kline"
path="market_stream/contract_kline.rs"

[[example]]
name="market_stream_liquidation_order"
path="market_stream/liquidation_order.rs"

[[example]]
name="trade_new_order_test"
path="trade/new_order_test.rs"

[[example]]
name="trade_get_order"
path="trade/get_order.rs"

[[example]]
name="trade_new_order"
path="trade/new_order.rs"

[[example]]
name="trade_modify_order"
path="trade/modify_order.rs"

[[example]]
name="trade_new_multi_order"
path="trade/new_multi_order.rs"

[[example]]
name="trade_modify_multi_order"
path="trade/modify_multi_order.rs"

[[example]]
name="trade_order_amendment"
path="trade/order_amendment.rs"

[[example]]
name="trade_cancel_order"
path="trade/cancel_order.rs"

[[example]]
name="trade_cancel_multi_order"
path="trade/cancel_multi_order.rs"

[[example]]
name="trade_countdown_cancel_all"
path="trade/countdown_cancel_all.rs"

[[example]]
name="trade_open_orders"
path="trade/open_orders.rs"

[[example]]
name="trade_force_orders"
path="trade/force_orders.rs"

[[example]]
name="trade_cancel_open_orders"
path="trade/cancel_open_orders.rs"

[[example]]
name="trade_all_orders"
path="trade/all_orders.rs"

[[example]]
name="trade_leverage"
path="trade/leverage.rs"

[[example]]
name="trade_multi_assets_margin"
path="trade/multi_assets_margin.rs"

[[example]]
name="trade_user_trades"
path="trade/user_trades.rs"

[[example]]
name="trade_margin_type"
path="trade/margin_type.rs"

[[example]]
name="trade_position_side"
path="trade/position_side.rs"

[[example]]
name="trade_position_margin"
path="trade/position_margin.rs"

[[example]]
name="trade_position_risk"
path="trade/position_risk.rs"

[[example]]
name="trade_adl_quantile"
path="trade/adl_quantile.rs"

[[example]]
name="user_data_stream_new_listen_key"
path="user_data_stream/new_listen_key.rs"

[[example]]
name="user_data_stream_close_listen_key"
path="user_data_stream/close_listen_key.rs"

[[example]]
name="user_data_stream_renew_listen_key"
path="user_data_stream/renew_listen_key.rs"

[[example]]
name="account_account"
path="account/account.rs"

[[example]]
name="account_leverage_bracket"
path="account/leverage_bracket.rs"